# HiggsLens

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/endpoints/: config.py  dataset.py  experiments.py  health.py  models.py  predictions.py
backend/app/core/: config.py
backend/app/data/: __init__.py  downloader.py  pipeline.py  validator.py
backend/app/evaluation/: evaluator.py
backend/app/experiments/: __init__.py  job_manager.py  tracker.py
backend/app/features/: __init__.py  preprocessing.py
backend/app/models/: base.py  dummy.py  hgb.py  logistic.py  mlp_plugin.py  registry.py  rf.py  xgb_plugin.py
backend/app/physics/: __init__.py  metrics.py
backend/app/schemas/: dataset.py  experiments.py  models.py  predictions.py
configs/: dataset.yaml  experiments.yaml  features.yaml  models.yaml
data/: README.md
docs/: architecture.md  dataset-card.md  model-card-template.md  scientific-scope.md  terminology.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: DatasetCard.tsx  (+2 more)
notebooks/: 00_dataset_validation.ipynb  01_baseline_experiments.ipynb
scripts/: download_dataset.py  start_dev.sh  train_models.py  validate_dataset.py
tests/: conftest.py  test_api.py  test_dataset_facts.py  test_evaluation.py  test_models.py  test_physics.py  test_pipeline.py  test_preprocessing.py
(+2 files in other folders)
