[project]
name = "higgslens-backend"
version = "0.1.0"
description = "FastAPI backend for HiggsLens ATLAS H->tautau ML exploration platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0.0",
    "torch>=2.2.0",
    "shap>=0.44.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "N803", "W293", "F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
